# Teana

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/zcj/teana/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: shader_fragment_video.glsl  shader_vertex_video.glsl
app/src/main/java/com/zcj/teana/: App.java  MainActivity.kt
app/src/main/java/com/zcj/teana/ffmpeg/: FFmpegCore.java
app/src/main/java/com/zcj/teana/opengles/: VideoCore.java
app/src/main/java/com/zcj/teana/opensles/: PlayCore.java
app/src/main/java/com/zcj/teana/pcm/: Control.java
app/src/main/java/com/zcj/teana/ui/: VideoActivity.kt
app/src/main/java/com/zcj/teana/util/: FileUtils.java
app/src/main/jni/: com_zcj_teana_ffmpeg_FFmpegCore.h  com_zcj_teana_opensles_playcore.h  com_zcj_teana_pcm_control.h  constant.h  ffmpeg_core.cpp  ffmpeg_engine.cpp  ffmpeg_engine.h  log_util.h  play_core.cpp  play_engin.cpp  play_engine.h  playcore.cpp
app/src/main/jni/include/libavutil/: ffversion.h
app/src/main/jni/video/: com_zcj_teana_opengles_VideoCore.h  video_core.cpp  video_engine.cpp  video_engine.h
app/src/main/res/layout/: activity_main.xml  activity_video.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/zcj/teana/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
